Aded more figures and proposed new paper structure

--- a/conferences/WAF_2016/Seguridad/waf2016.bib
+++ b/conferences/WAF_2016/Seguridad/waf2016.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF-8
 
+
+@article{rusu2010ros,
+	title={ROS-Robot Operating System},
+	author={Rusu, Radu Bogdan},
+	journal={Tutorial Slides, November},
+	volume={1},
+	year={2010}
+}
+
+
 @INPROCEEDINGS{Bonaci2012,
   author = {Bonaci, Tamara and Chizeck, Howard Jay},
   title = {{On potential security threats against rescue robotic systems}},
